<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
	<string name="widget_name">Digi Clock Widget</string>
	<string name="widget_name_twelve">DigiClock Widget (12hr)</string>
	<string name="widget_name_twenty_four">DigiClock Widget (24hr)</string>
	<string name="widget_name_large">DigiClock Widget (Large)</string>
	<string name="app_name">Digi Clock Widget</string>
	<string name="settings_app">DigiClock Settings</string>
	<string name="theme_chooser_name">Theme Chooser</string>
	<string name="launcher_chooser_name">Tap Launches ...</string>
	<string name="text_settings_name">Text Settings</string>
	<string name="news_name">DigiClock Update News</string>
	
	<string name="time_default">00</string>
	<string name="time_default_full">00:00</string>
	<string name="date_default">Sat, 31 Dec 2009</string>
	
	<string name="more_themes">Choose Themes</string>
	<string name="online_themes">Online Themes</string>
	<string name="offline_themes">Offline Themes</string>
	
	<!-- Date Formatter Strings -->
	<string name="date_format_name">Date Format</string>
	<string name="date_format_save">save</string>
	<string name="date_format_reset">reset</string>
	<string name="date_format_update">update</string>
	<string name="date_format_preview">preview</string>
	<string name="date_format_error">Error</string>
	
	<!--  Text Settings Strings -->
	<string name="text_color">Text Colour</string>
	<string name="text_leading_zero">Hour Leading Zero</string>
	<string name="text_date_enabled">Date Enabled</string>
	<string name="text_typeface">Font</string>
	<string name="text_time_size">Time Size</string>
	<string name="text_date_size">Date Size</string>
	
	<string name="bg_alpha">Background transparency</string>
	<string name="text_alpha">Text transparency</string>
	
	<string name="text_24hour">24 Hour (eg: 21:00)</string>
	<string name="text_shadowEnabled">Text Shadow</string>
	<string name="text_markerEnabled">AM/PM marker</string>
	
	<string name="hour_format">DigiClock setup - Time Format:</string>
	<string-array name="time_options">
		<item>12 hour ( 9:00 )</item>
		<item>24 hour ( 21:00 )</item>
	</string-array>
	
	<string name="text_fonterror">Theme doesn\'t support custom font</string>

	<string name="date_day">Day</string>
	<string name="date_month">Month</string>
	<string name="date_year">Year</string>
	<string name="date_seperator">Seperator</string>
	
	<string-array name="colors">
		<item>Black</item>
		<item>White</item>
		<item>Velvet</item>
		<item>Pink</item>
		<item>Blue</item>
		<item>Red</item>
		<item>Green</item>
		<item>Ghost</item>
		<item>Going Dutch</item>
		<item>Orange</item>
		<item>Clear</item>
		<item>Clear</item>
		<item>Yellow</item>
		<item>Gold</item>
		<item>Purple</item>
		<item>Solid White</item>
		<item>Solid Black</item>
		<item>Cloud</item>
		<item>Cubism White</item>
		<item>Metal Pill</item>
		<item>Speech</item>
		<item>Chip</item>
		<item>DigiMetal</item>
		<item>DigiPool</item>
		<item>DigiSage</item>
	</string-array>
	
	<string-array name="settings">
		<item>Themes</item>
		<item>Tap Launches</item>
		<item>Time/Text Settings</item>
		<item>Date Format ( Beta )</item>
		<item>Donate</item>
		<item>Help</item>
	</string-array>
	
	<string-array name="settings_desc">
		<item>change the image</item>
		<item>what happens widget is tapped</item>
		<item>time options and text appearance</item>
		<item>how the date is displayed</item>
		<item>help out the dev</item>
		<item>common questions and answers</item>
	</string-array>

	<string name="load_tap_text">Loading app list</string>
	<string name="load_tap_title">Loading</string>
	
	<string name="launcher_title">Choose your app</string>
	<string name="launch_error">I can\'t do that Dave</string>
	<string name="launch_error_detail">Sorry, that application cannot be launched. For some reason, it was made like that. Pity.</string>
	<string name="general_ok">Ok</string>
	<string name="general_cancel">Cancel</string>
</resources>
