<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical">

<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
	<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:id="@+id/outDate" android:text="..."></TextView>
	<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/inDate" android:text="ENTER PATTERN"></EditText>
</LinearLayout>

<LinearLayout android:id="@+id/LinearLayout04" android:layout_height="wrap_content" android:layout_width="fill_parent">
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_format_reset" android:id="@+id/btnReset"></Button>
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_format_preview" android:id="@+id/btnPreview"></Button>
</LinearLayout>

<LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal" android:padding="5dip">
	<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:text="yy / yyyy" android:width="120dip"></TextView>
	<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/date_year"></TextView>
</LinearLayout><LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal" android:padding="5dip" android:id="@+id/LinearLayout05">
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:id="@+id/TextView04" android:text="M / MM / MMM" android:width="120dip"></TextView>
	<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView05" android:text="@string/date_month"></TextView>
</LinearLayout><LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal" android:padding="5dip" android:id="@+id/LinearLayout06">
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:id="@+id/TextView06" android:width="120dip" android:text="d / dd / E"></TextView>
	<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/date_day" android:id="@+id/TextView07"></TextView>
</LinearLayout>


</LinearLayout>
